# DA_PROJ2_FEUP

./: CMakeLists.txt  README.md  main.cpp
codigo/include/: App.h  Graph.h  Menu.h  structs.h
codigo/src/: App.cpp  FileReader.cpp  Graph.cpp  Menu.cpp
include/: App.h  Graph.h  Menu.h
input/: smallTest.txt
src/: Graph.cpp  Menu.cpp
